-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.5beta3
========
    - 0.5beta3 includes all bugfixes listed under release
      "0.4.7".
      
- orm
    - Added a new SessionExtension hook called after_attach().
      This is called at the point of attachment for objects
      via add(), add_all(), delete(), and merge().
      
0.5beta2
========
    - 0.5beta2 includes some of the bugfixes listed under 
      release "0.4.7".

- orm
    - In addition to expired attributes, deferred attributes
      also load if their data is present in the result set.
      [ticket:870]
    
    - session.refresh() raises an informative error message if
      the list of attributes does not include any column-based
      attributes.
    
    - query() raises an informative error message if no columns
      or mappers are specified.
      
    - lazy loaders now trigger autoflush before proceeding.  This
      allows expire() of a collection or scalar relation to 
      function properly in the context of autoflush.
      
    - column_property() attributes which represent SQL expressions
      or columns that are not present in the mapped tables
      (such as those from views) are automatically expired
      after an INSERT or UPDATE, assuming they have not been
      locally modified, so that they are refreshed with the
      most recent data upon access.  [ticket:887]

    - Fixed explicit, self-referential joins between two 
      joined-table inheritance mappers when using 
      query.join(cls, aliased=True).  [ticket:1082]

    - Fixed query.join() when used in conjunction with a
      columns-only clause and an SQL-expression 
      ON clause in the join.
      
    - The "allow_column_override" flag from mapper() has
      been removed.  This flag is virtually always misunderstood.
      Its specific functionality is available via the 
      include_properties/exclude_properties mapper arguments.
      